# wechat-article-reader

./: .gitignore  README.md  app.py  docker-compose.yml  env.example  package.json  run_service.ps1  使用指南.md
routes/: __init__.py  account.py  admin.py  article.py  articles.py  health.py  image.py  login.py  rss.py  search.py  search_all.py  search_article.py  stats.py
skills/wechat-article-reader/: SKILL.md  pyproject.toml
skills/wechat-article-reader/service/: Dockerfile  README.md  app.py  docker-compose.yml  start.bat  start.sh  status.sh
skills/wechat-article-reader/service/routes/: account.py  articles.py  health.py  login.py  search.py
skills/wechat-article-reader/service/static/: history.html
skills/wechat-article-reader/service/utils/: article_fetcher.py  auth_manager.py  helpers.py  login_reminder.py  rate_limiter.py  rss_store.py  rss_streaming.py
static/: admin.html  blacklist.html  categories.html  rss.html  search.html  search_all.html
utils/: __init__.py  auth_manager.py  content_processor.py  helpers.py  http_client.py  idle_shutdown.py  image_proxy.py  login_reminder.py  proxy_pool.py  rate_limiter.py  rss_poller.py  rss_store.py  webhook.py
