[project]
name = "wechat-public-article-reader"
version = "0.1.0"
description = "Local WeChat public article reader skill."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "curl-cffi>=0.13,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
